--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "mapbox-gl": "^3.14.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11"
   },
