--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
     "mapbox-gl": "^3.14.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-map-gl": "^8.0.4",
     "react-router-dom": "^7.8.0",
